many fixes: partial group styling, cards can be dragged horizontally and vertically, fixed z-index issue with card buttons, fixes to form settings, added to app styling for hovers on card buttons

--- a/jsapp/kobo/stylesheets/partials/form_builder/_card_multichoice.scss
+++ b/jsapp/kobo/stylesheets/partials/form_builder/_card_multichoice.scss
@@ -14,7 +14,14 @@
     @extend %card-expansion;
 }
 
-
+.survey__row--selected {
+    .card--selectquestion__expansion, 
+    .card__settings {
+        border-left-color: $linkColor;
+        border-right-color: $linkColor;
+        border-bottom-color: $linkColor;
+    }
+}
 
 // ==========================================================================
 // Overrides
